Fixed the fact that there was no spacing between the two columns of introductory content and subsequent content on feature stack pages' description sections.

--- a/www.html5rocks.com/static/css/new.css
+++ b/www.html5rocks.com/static/css/new.css
@@ -1181,6 +1181,7 @@ nav.features_outline ul ul a
 .description section.column + section.column + section
 {
   clear: left;
+  padding-top: 3em;
 }
 
 .description section ul
